--- a/public_html/templates/attending-confirmation.html
+++ b/public_html/templates/attending-confirmation.html
@@ -1,26 +1,29 @@
 <!-- Modal -->
-<div class="modal" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
+<div class="modal" id="attendance" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="loginLabel">Login</h5>
+				<h5 class="modal-title" id="loginLabel">Ready to vibe with this group?</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
+
 			<div class="modal-body">
-				<form #signInForm="ngForm" class="form-horizontal" name="signInForm" id="signinForm" novalidate
+				<form #signInForm="createEventAttendanceForm" class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" novalidate
 						(ngSubmit)="eventAttendanceNumberAttending();">
 					<div class="form-group">
-						<label for="profileEmail" class="col-form-label">Email:</label>
-						<input type="email" name="profileEmail" id="profileEmail" required [(ngModel)]=eventAttendance.eventAttendanceNumberAttending #eventAttendanceNumberAttending="ngModel" class="form-control input-sm">
+						<label for="eventAttendanceNumberAttending" class="col-form-label">bringing any friends?</label>
+						<input type="number" name="eventAttendanceNumberAttending" id="eventAttendanceNumberAttending" required [(ngModel)]=eventAttendance.eventAttendanceNumberAttending #eventAttendanceNumberAttending="ngModel" class="form-control input-sm">
 					</div>
+
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="submit" [disabled]="eventAttendance.eventAttendanceNumberAttending" class="btn btn-info">Login</button>
+						<button type="submit" id="submit" [disabled]="eventAttendance.eventAttendanceNumberAttending" class="btn btn-info">Lets do it!</button>
 					</div>
 				</form>
 			</div>
+
 			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.status" role="alert">
 				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span aria-hidden="true">&times;</span></button>
 				{{ status.message }}
