--- a/public_html/templates/profile.html
+++ b/public_html/templates/profile.html
@@ -6,7 +6,7 @@
 			<div class="card">
 				<img class="card-img-top" src="../../../image/lazy-allison.jpg" alt="Card image cap" height="400">
 				<div class="card-body bg-dark text-white">
-					<h3 class="card-title">Allison Mopsqueezer</h3>
+					<h3 class="card-title">{{profile.profileFirstName}} {{profile.profileLastName}}</h3>
 					<h4 class="card-subtitle mb-2 text-muted">Rating</h4>
 					<div class="text-center">
 						<i class="fa fa-thermometer-quarter fa-3x m-4 text-primary" aria-hidden="true"></i>
