--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -1,6 +1,8 @@
 <!-- Selectors -->
 <create-event></create-event>
 <attending-event></attending-event>
+<edit-profile></edit-profile>
+<edit-event></edit-event>
 <login-nav></login-nav>
 <div class="container py-4 bg-dark">
 	<div class="row mx-0">
@@ -33,6 +35,12 @@
 				<div class="card-footer">
 					<a href="#" data-toggle="modal" data-target="#createEvent">
 						<small class="text-muted"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event
+						</small>
+					</a>
+				</div>
+				<div class="card-footer">
+					<a href="#" data-toggle="modal" data-target="#editEvent">
+						<small class="text-muted"><i class="fa fa-plus" aria-hidden="true"></i> Edit Event
 						</small>
 					</a>
 				</div>
