updated the create event component

--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="submit" name="signUp" class="btn btn-info">Save Changes</button>
+						<button type="submit" id="profileSaveChanges" name="profileSaveChanges" class="btn btn-info">Save Changes</button>
 					</div>
 				</form>
 			</div>
