--- a/public_html/templates/attending-confirmation.html
+++ b/public_html/templates/attending-confirmation.html
@@ -1,33 +1,23 @@
-<!--&lt;!&ndash; Modal &ndash;&gt;-->
-<!--<div class="modal" id="attendance" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">-->
-	<!--<div class="modal-dialog" role="document">-->
-		<!--<div class="modal-content">-->
-			<!--<div class="modal-header">-->
-				<!--<h5 class="modal-title" id="loginLabel">Ready to vibe with this group?</h5>-->
-				<!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-					<!--<span aria-hidden="true">&times;</span>-->
-				<!--</button>-->
-			<!--</div>-->
-
-			<!--<div class="modal-body">-->
-				<!--<form #signInForm="createEventAttendanceForm" class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" novalidate-->
-						<!--(ngSubmit)="eventAttendanceNumberAttending();">-->
-					<!--<div class="form-group">-->
-						<!--<label for="eventAttendanceNumberAttending" class="col-form-label">bringing any friends?</label>-->
-						<!--<input type="number" name="eventAttendanceNumberAttending" id="eventAttendanceNumberAttending" required [(ngModel)]=eventAttendance.eventAttendanceNumberAttending #eventAttendanceNumberAttending="ngModel" class="form-control input-sm">-->
-					<!--</div>-->
-
-					<!--<div class="modal-footer">-->
-						<!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-						<!--<button type="submit" id="submit" [disabled]="eventAttendance.eventAttendanceNumberAttending" class="btn btn-info">Lets do it!</button>-->
-					<!--</div>-->
-				<!--</form>-->
-			<!--</div>-->
-
-			<!--<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.status" role="alert">-->
-				<!--<button type="button" class="close" aria-label="Close" (click)="status = null;"><span aria-hidden="true">&times;</span></button>-->
-				<!--{{ status.message }}-->
-			<!--</div>-->
-		<!--</div>-->
-	<!--</div>-->
-<!--</div>-->
+<!-- Modal -->
+<div class="modal" id="attendanceCheckIn" tabindex="-1" role="dialog" aria-labelledby="attendanceCheckInLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="attendanceCheckInLabel">Are you ready to vibe?</h5>
+			</div>
+			<div class="modal-body">
+				<form #signInForm="ngForm" class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" novalidate
+						(ngSubmit)="eventAttednanceNumberAttending">
+					<div class="form-group">
+						<label for="eventAttendanceNumberAttending" class="col-form-label">Number Attending?</label>
+						<input type="number" name="eventAttendanceNumberAttending" id="eventAttendanceNumberAttending" required [(ngModel)]=eventAttendance.eventAttendanceNumberAttending #eventAttednanceNumberAttending="ngModel" class="form-control input-sm">
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Not Yet!</button>
+						<button type="submit" id="submit" [disabled]="createEventAttendanceForm.valid" class="btn btn-info">Lets Do It!</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
